Added slick slider

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.64.2"
+    "react-slick": "^0.29.0",
+    "sass": "^1.64.2",
+    "slick-carousel": "^1.8.1"
   }
 }
